--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "@nuxt/ssr-class-serialiser",
   "version": "1.0.0",
   "description": "A Nuxt module to allow class instances transfer in Universal mode",
-  "main": "index.ts",
+  "main": "src/index.js",
   "author": "Florent Catiau-Tristant <florent.ct@orange.fr>",
   "license": "MIT",
-  "peerDependencies": {
-    "vue-class-component": "^7.2.6"
-  },
+  "types": "./types/index.d.ts",
   "dependencies": {
     "class-transformer": "^0.4.0",
-    "typescript": "^4.2.4"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.4",
+    "@types/node": "^15.3.0"
   }
 }
