--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "@nuxt/ssr-class-serialiser",
   "version": "1.0.0",
   "description": "A Nuxt module to allow class instances transfer in Universal mode",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "author": "Florent Catiau-Tristant <florent.ct@orange.fr>",
   "license": "MIT",
   "types": "./types/index.d.ts",
+  "scripts": {
+    "build": "rollup -c"
+  },
   "dependencies": {
     "class-transformer": "^0.4.0",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6"
   },
   "devDependencies": {
-    "typescript": "^4.2.4",
-    "@types/node": "^15.3.0"
+    "@nuxt/types": "^2.15.6",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/node": "^15.3.0",
+    "rollup": "^2.48.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "tslib": "^2.2.0",
+    "typescript": "^4.2.4"
   }
 }
