--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "class-transformer": "^0.4.0",
     "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6"
+    "vue-class-component": "~7.0.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.6",
