--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   "devDependencies": {
     "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "^2.15.6",
+    "@nuxt/typescript-build": "^2.1.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
+    "babel-jest": "^26.6.3",
+    "core-js": "^3.12.1",
     "jest": "^26.6.3",
+    "nuxt": "^2.15.6",
+    "nuxt-property-decorator": "^2.9.1",
     "rollup": "^2.48.0",
     "rollup-plugin-uglify": "^6.0.4",
+    "ts-jest": "^26.5.6",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
