--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,15 @@
     "allowJs": true,
     "sourceMap": false,
     "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "noEmit": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
     "types": [
       "@types/node",
       "@nuxt/types",
+      "@types/jest"
     ]
   },
   "exclude": [
