--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "types": "./lib/types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "dev": "nuxt example"
+    "dev": "nuxt example",
+    "test": "jest"
   },
   "dependencies": {
     "class-transformer": "^0.4.0",
