--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "ts-jest": "^26.5.6",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
